cleaned shit up, refactoring changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="crossorigin="anonymous"></script>
-        <script src ="init.js"></script>
+        <script src ="nQueryPrelude.js"></script>
         <script src ="nimcache/main.js"></script>
         <script>
             $(document).ready(onLoad);
